[project]
name = "random-features"
version = "0.1.0"
description = "A project to generate random features for different kernels"
authors = [{ name = "Test", email = "test@example.com" }]
requires-python = ">=3.8"
dependencies = [
    "pytest",
    "numpy",
    "matplotlib",
    "scikit-learn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
